DevOps/Project 207/7-IngressController/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  namespace: test
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: testblog.example.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: my-wp-svc-test
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prod
  namespace: production
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: companyblog.example.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: my-wp-svc-prod
            port: 
              number: 80
